--- a/lib/UniversalTelegramBot/library.properties
+++ b/lib/UniversalTelegramBot/library.properties
@@ -1,5 +1,5 @@
 name=UniversalTelegramBot
-version=1.1.0
+version=1.3.0
 author=Brian Lough
 maintainer=Brian Lough <brian.d.lough@gmail.com>
 sentence=Arduino Telegram Bot library for multiple different architectures.
@@ -7,3 +7,4 @@ paragraph=A Universal Telegram library for arduino devices.
 category=Communication
 url=https://github.com/witnessmenow/Universal-Arduino-Telegram-Bot
 architectures=*
+depends=ArduinoJson
