--- a/lib/UniversalTelegramBot/platformio.ini
+++ b/lib/UniversalTelegramBot/platformio.ini
@@ -1,23 +1,27 @@
 ; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; http://docs.platformio.org/page/projectconf.html
-[common]
-lib_deps_external = ArduinoJson
+
+;   64 ArduinoJson
+;      by Benoit Blanchon
+;      Repository: https://github.com/bblanchon/ArduinoJson.git
+; 1262 UniversalTelegramBot
+;      by Brian Lough
+;      Repository: https://github.com/witnessmenow/Universal-Arduino-Telegram-Bot.git
+
+[platformio]
+description = Universal Telegram Bot Library
+default_envs = d1_mini
+
+[env]
+lib_deps =
+  ArduinoJson
+monitor_speed = 115200
 
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
 framework = arduino
-lib_deps = WifiManager, ${common.lib_deps_external}
 
 [env:esp32dev]
-platform = espressif32_stage
-board = esp32dev
+platform = espressif32
+board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = ${common.lib_deps_external}
